<resources>
    <string name="app_name">Business</string>
    <string name="txt_tutorial_text_1">Welcome To Tenakata\nMobile app </string>
    <string name="txt_tutorial_text_2">Amazing Payment\nExperience\njust tap and go </string>
    <string name="error_empty">This field can\'t be blank.</string>
    <string name="error_user_not_exists">This phone number is not registered with any account.</string>
    <string name="error_unsuccessful_authentication_attempt">Fingerprint not authorized, try again.</string>
    <string name="error_too_many_attempts">Too many attempts, try again later.</string>
    <string name="error_fingerprint_not_saved">You don\'t have any fingerprint saved on your device, add one from settings.</string>
    <string name="txt_home">HOME</string>
    <string name="txt_Profile">PROFILE</string>
    <string name="txt_tranining">TRAINING</string>
    <string name="txt_reminder">DAILY REMINDER</string>
    <string name="txt_faq">FAQ &amp; HELP</string>
    <string name="txt_contact">CONTACT US</string>
    <string name="txt_logout">LOGOUT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase">Purchase</string>
    <string name="sales">Sales</string>
    <string name="txt_sales">Cash Sale</string>
    <string name="txt_puchases">Credit Sale</string>

    <string name="txt_server_not_respond">Slow Internet connection please check your internet connection</string>
    <string name="text_server_error">Oops! Server Error found please wait and try again</string>
    <string name="txt_connection_error">Please Check your internet Connection</string>
    <string name="txt_went_wrong">Something went wrong please try again</string>
    <string name="txt_parsing_error">we are facing some parsing error please try again</string>
    <string name="ok_text">Okay</string>
    <string name="cancel_text">Cancel</string>
    <string name="error_sub_title_text">Looks like there is a problem at our end, try again in sometime.</string>
    <string name="error_title_text">Warning</string>
    <string name="txt_update_available">Update Available</string>
    <string name="txt_login_again">Unauthorized access need to login again</string>
    <string name="net_error">Location access seems disabled,\ngo to settings to enable</string>
    <string name="no_internet_connection">Oops! No Internet Connection</string>
    <string name="enable_permission">Enable Permission</string>
    <string name="settings">Settings. </string>
    <string name="retry">retry</string>
    <string name="unable_to_get_gps">Unable to get GPS</string>
    <string name="no_gps">no GPS available</string>
    <string name="no_internet">No internet Connection Found</string>
    <string name="no_internet_available">No internet Connection available</string>
    <string name="message_back_pressed_text">Press again to exit</string>
    <string name="txt_enter_mobile_number">Enter mobile number</string>
    <string name="txt_enter_valid_mobile">Enter Valid mobile number</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_password_lenth_short">Password length is too short</string>
    <string name="txt_select_country_code">Select country code</string>
    <string name="txt_wrong_otp">The sms verification code is invalid. Please resend the verification code sms and be sure use the verification code provided by the user.</string>
    <string name="txt_code_expired">The sms code has expired. Please re-send the verification code to try again.</string>
    <string name="txt_enter_confirm_password">Enter confirm Password</string>
    <string name="txt_confirm_password_not_matching">Confirm password not matching</string>
    <string name="txt_cash_purchase">Cash Purchase</string>
    <string name="txt_credit_purchase">Credit purchase</string>
    <string name="txt_want_to_logout">Are you sure you want to logout?</string>
    <string name="txt_permission_denied_message"><![CDATA[If you reject permission,you can not use this service  Please turn on permissions at [Setting] > [Permission]]]></string>
    <string name="txt_select_date">Select Date</string>
    <string name="txt_enter_amount">Enter Amount</string>
    <string name="txt_enter_items">Enter items</string>
    <string name="txt_click_image">Need receipt Image</string>
    <string name="txt_enter_name">Enter Name</string>
    <string name="txt_enter_ID_no">Enter ID no.</string>
    <string name="txt_loans">LOANS</string>
    <string name="txt_order_stock">ORDER STOCK</string>
    <string name="txt_reports">REPORTS</string>
    <string name="txt_creatempin">CREATE MPIN</string>

    <string name="training">Training</string>
    <string name="pleaserate">Please Rate</string>
    <string name="pleaseratevideo">Please Rate Video</string>
    <string name="videodescription">sadhbajs  sakjdf ckjskfs gbs dbgdlj bvs lv sdjfv ldsjv jdsf vj dsjbvjd jvbsdjh vjsd bh jh vj vj vj j vj vjh jhljhgljh gljh glj hglj hglj hgljh lj hljhgljh glj hglj hglj hgljh gl jhglj hglj hgl jh gljhglj h
    jh jh gj hljh gljh ljh ljhbl bhljbljh bljhbljh bljhblj bljhb ljh bljhbljhb ljhb jh bljhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
    b nb mnb mnbv mnb vmnbvmnbv mn bmnbvmnbvmnbv mnb vn vmn bvn vmnbv mnb vnb vmn bvmnbvmnbvmn bvmnvn bvm nb vmnb vmnbv mnb nmbvmnb vmnbvmnbvmnbvmnbvmnvmnbvmnb vmnvmn vmnb vmnb
    ,jh bjh bjbj blj bljblj bljhbj</string>
    <string name="howtoimprove">How to improve Sales.</string>
    <string name="next">next</string>
    <string name="edit">Edit</string>
    <string name="totalitems">Total Items: </string>
    <string name="total">Total</string>
    <string-array name="description_array_dropdown">
        <item>Stocks</item>
        <item>Rent</item>
        <item>Salary</item>
        <item>Maji</item>
        <item>Umemep</item>
        <item>Others</item>
    </string-array>
</resources>

