<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ActivityTrainingDetails">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/tv_head_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_icon" />

            <TextView
                android:id="@+id/tv_head_register_third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/training"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_head_left"
                app:layout_constraintStart_toEndOf="@+id/tv_head_left"
                app:layout_constraintTop_toTopOf="@+id/tv_head_left"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <FrameLayout

                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.github.rtoshiro.view.video.FullscreenVideoLayout
                    android:id="@+id/videoview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

            <ScrollView
                android:id="@+id/training_scrollview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:fillViewport="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintBottom_toTopOf="@+id/ratingBar6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_training_details_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/howtoimprove"
                        android:textSize="@dimen/sp_14"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/tv_training_details_subtitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/app_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_training_details_title"
                        app:layout_constraintTop_toBottomOf="@+id/tv_training_details_title" />

                    <TextView
                        android:id="@+id/tv_training_details_views"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/app_name"
                        app:layout_constraintEnd_toEndOf="@+id/tv_training_details_subtitle"
                        app:layout_constraintStart_toStartOf="@+id/tv_training_details_subtitle"
                        app:layout_constraintTop_toBottomOf="@+id/tv_training_details_subtitle" />

                    <TextView
                        android:id="@+id/tv_training_details_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:justificationMode="inter_word"
                        android:paddingRight="@dimen/dp_20"
                        android:text="@string/videodescription"
                        android:textAlignment="inherit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/tv_training_details_views"
                        app:layout_constraintTop_toBottomOf="@+id/tv_training_details_views"
                        app:layout_constraintVertical_bias="1.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>


            <TextView
                android:id="@+id/tv_pleaserate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/pt_sans_bold"
                android:text="@string/pleaseratevideo"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/training_nextbutton"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <RatingBar
                android:id="@+id/ratingBar6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:numStars="5"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintBottom_toBottomOf="@+id/tv_pleaserate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_pleaserate"
                app:layout_constraintTop_toTopOf="@+id/tv_pleaserate" />


            <Button
                android:id="@+id/training_nextbutton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_login_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="Submit"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar6"
                app:layout_constraintStart_toStartOf="@+id/tv_pleaserate" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
