<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        tools:context=".Activity.ActivitySaleViewDetails"
        android:background="@color/colorBlue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView11"
                android:src="@drawable/collect_icon"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_80"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/view11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/viewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Image A000234"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <TextView
                android:id="@+id/viewShopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text=""
                android:textSize="@dimen/sp_13"
                app:layout_constraintStart_toStartOf="@+id/viewTitle"
                app:layout_constraintTop_toBottomOf="@+id/viewTitle" />

            <TextView
                android:id="@+id/viewPayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:background="@drawable/a_pay_button_drawable"
                android:fontFamily="@font/montserrat_regular"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_6"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_6"
                android:text="   Pay  "
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view16" />

            <Button
                android:id="@+id/editbutton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_login_button"
                android:drawableLeft="@drawable/editpencil"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/edit"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/viewRemindBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:background="@drawable/a_bg_remind_btn"
                android:fontFamily="@font/montserrat_regular"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_6"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_6"
                android:text="Remind"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/viewPayBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/viewPayBtn" />

            <View
                android:id="@+id/view11"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="20dp"
                android:background="@color/colorGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView11" />

            <View
                android:id="@+id/view16"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="20dp"
                android:background="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_total" />

            <View
                android:id="@+id/view17"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="10dp"
                android:background="@color/colorGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_list" />

            <TextView
                android:id="@+id/tv_totalitems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/totalitems"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="@+id/view11"
                app:layout_constraintTop_toBottomOf="@+id/view11" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/total"
                android:textSize="@dimen/sp_16"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintStart_toStartOf="@+id/view17"
                app:layout_constraintTop_toBottomOf="@+id/view17" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:fontFamily="@font/montserrat_bold"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/tv_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_total"
                app:layout_constraintTop_toTopOf="@+id/tv_total" />

            <TextView
                android:id="@+id/tv_item_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="20dp"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_totalitems"
                app:layout_constraintTop_toBottomOf="@+id/tv_totalitems" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_creditviewdetails_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="TextView"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>